--- a/freaky_friday/regressions.qmd
+++ b/freaky_friday/regressions.qmd
@@ -1,5 +1,5 @@
 ---
-title: Create the regression tables
+title: Regressions
 ---
 
 # Setup
@@ -42,6 +42,11 @@ main <- readRDS(here("data", "freaky_friday", "main.RDS")) %>%
 The main regression table only compares the bottom quintile to the top quintile. @dellavigna2009 also specify a number of indicator variables based on year, month, and the size of the firm (adjusted for the average of the logarithm of the size).
 
 @dellavigna2009 also control for the volatility of earnings surprises where volatility is measured by the standard deviation in the 4 years before the earnings announcement. It turns out that this is a quite computational expensive exercise. Below, I first write a function with to select the necessary earnings surprises and than calculate the standard deviation. Than, I use the function making use of the `dtplyr` package which makes use of the faster `data.table` package to do data cleaning. The only extra step we need to make is to make the `main` data compatible with the package through the `lazy_dt` function and use the new compatible `main_dt` in our function. You can see that the two functions give the same result on a test firm and that we decrease the run time of the function by a factor of 2.
+
+:::{.callout-warning}
+It turns out that the speed gain is in the advantage of the `tidyverse` implementation on my Mac Mini. This could be because I have installed a more recent version on my Mac Mini of the `tidyverse`. I am going to investigate this further at some point. Nevertheless it shows the advantage of timing the different implementations. So I am going to leave them here.
+:::
+
 
 ```{r}
 #| label: get-volatility
@@ -89,7 +94,7 @@ subset <- main %>%
   mutate(top = if_else(quantile == 11, 1, 0),
          log_size = log(market_value),
          volatility = pmap_dbl(list(gvkey, anndat),
-                               ~ get_volatility_dt(..1, ..2),
+                               ~ get_volatility(..1, ..2),
                                .progress = TRUE)) %>%
   mutate(log_size_adj = log_size - mean(log_size, na.rm = T),
          .by = c(quarter, year)) %>%
@@ -117,10 +122,10 @@ subset <- readRDS(here("data", "freaky_friday", "subset.RDS"))
 model1a <- feols(car_short ~ friday * top,
                  cluster = "anndat",
                  data = subset)
-model2a <- feols(car_short ~ friday * top | (year + month + size_decile) : top,
+model2a <- feols(car_short ~ friday * top | (year[top] + month[top] + size_decile[top]),
                  cluster = "anndat",
                  data = subset)
-model3a <- feols(car_short ~ friday * top | (year + month + size_decile + vol_decile) : top,
+model3a <- feols(car_short ~ friday * top | (year[top] + month[top] + size_decile[top] + vol_decile[top]),
                  cluster = "anndat",
                  data = subset)
 msummary(list(model1a, model2a, model3a), gof_omit = gof_omit, stars = TRUE)
@@ -133,10 +138,10 @@ msummary(list(model1a, model2a, model3a), gof_omit = gof_omit, stars = TRUE)
 model1b <- feols(car_long ~ friday * top,
                  cluster = "anndat",
                  data = subset)
-model2b <- feols(car_long ~ friday * top | (year + month + size_decile) : top,
+model2b <- feols(car_long ~ friday * top | (year[top] + month[top] + size_decile[top]),
                  cluster = "anndat",
                  data = subset)
-model3b <- feols(car_long ~ friday * top | (year + month + size_decile + vol_decile) : top,
+model3b <- feols(car_long ~ friday * top | (year[top] + month[top] + size_decile[top] + vol_decile[top]),
                  cluster = "anndat",
                  data = subset)
 msummary(list(model1b, model2b, model3b), gof_omit = gof_omit, stars = TRUE)
@@ -156,15 +161,16 @@ model1 <- feols(car_short ~ friday * quantile,
                 cluster = "anndat",
                 data = main_extra)
 model2 <- feols(car_short ~ friday + friday : quantile
-                | (year + month + size_decile) : quantile,
+                | (year[quantile] + month[quantile] + size_decile[quantile]),
                 cluster = "anndat",
                 data = main_extra)
 model3 <- feols(car_long ~ friday * quantile,
                 cluster = "anndat",
                 data = main_extra)
 model4 <- feols(car_long ~ friday  + friday : quantile
-                | (year + month + size_decile) : quantile,
+                | (year[quantile] + month[quantile] + size_decile[quantile]),
                 cluster = "anndat",
                 data = main_extra)
+
 msummary(list(model1, model2, model3, model4), gof_omit = gof_omit, stars = TRUE)
 ```
