--- a/slides/slides1.qmd
+++ b/slides/slides1.qmd
@@ -39,8 +39,11 @@ Empirical just means that some data in the broadest possible be sense will be co
 
 1. The research process and basic data skills in `R` (week 1 - 3)
 2. Research design (week 4 - 6) 
-3. Advanced regression (week 7 - 9)
-4. Time series analysis (10 - 12)
+3. Data Management and Event Study (week 7 - 8)
+4. Special Topics (9 - 12)
+    - Machine Learning
+    - Discrete Dependent Variables
+    - Generated Variables
 
 ::: {.notes}
 All modules work as stand-alone units and aim to cover a wide range of topics. Not all of them will in the end be relevant for everyone. However, it is probably a good idea to get to know the different statistical methods, their advantages, and disadvantages. Bringing a new methodology to an old topic can be a valuable contribution. Some problems have already been solved in other research streams.
@@ -53,21 +56,21 @@ All modules work as stand-alone units and aim to cover a wide range of topics. N
 - (Almost weekly) Assignments (70%)
 
 ::: {aside}
-    - Homework: Practical Issues (0%) (3 March)
-    - Assignment 1: Theory and Regressions (10%) (10 March)
+    - Homework: Practical Issues (0%) (1 March)
+    - Assignment 1: Theory and Regressions (10%) (8 March)
     - Assignment 2: Regression and control variables (10%) (17 March)
-    - Assignment 3: Research Design (10%) (7 April)
-    - Assignment 4: Event Study (10%) (28 April)
-    - Assignment 5: Machine Learning (10%) (5 May)
-    - Assignment 6: Simulation Research Design (20%) (26 May)
+    - Assignment 3: Research Design (10%) (12 April)
+    - Assignment 4: Event Study (10%) (26 April)
+    - Assignment 5: Machine Learning (10%) (3 May)
+    - Assignment 6: Simulation Research Design (20%) (24 May)
 :::
 
 - Proposal and presentation (30%) 
 
 ::: {aside}
-    - Pitch (10%) (31 March)
+    - Pitch (10%) (29 March)
     - Proposal (10%) (12 May)
-    - Presentation (10%) (Probably Thursday 20 July)
+    - Presentation (10%) (Probably Thursday 18 July)
 :::
 
 ::: {.notes}
@@ -211,8 +214,9 @@ I like the basic intuition and deriviation of the model. The derivation is strai
 
 ## Data: Compensation-Value 
 
-
-```{r us_comp_value_data, include = TRUE, echo=FALSE}
+```{r}
+#| label: us_comp_value_data
+#| echo: false
 # Read the data from a custom folder. If the data is not in this folder, change
 # the path to the folder. Rename some of the variables to make them easier to
 # work with.
@@ -245,13 +249,17 @@ plot_comp_value =
                   coef(power_law_comp)[1] * x ^ coef(power_law_comp)[2]},
                 colour = "blue") +
   # Add a title
-  ggtitle("US CEO compensation 2011-2022") +
+  ggtitle("US CEO compensation 2011-2024") +
   # Add label for the x-axis and y-axis
   ylab("CEO compensation (in million USD)") +
   xlab("Company market value (in billion USD)")
 ```
 
-```{r us_comp_value_plot, warning=FALSE, fig.margin = TRUE, echo = FALSE}
+```{r}
+#| label: us_comp_value_plot
+#| warning: false
+#| fig.margin: true
+#| echo: false
 print(plot_comp_value + annotate("text", y = 45, x = 500, parse = TRUE,
                                  label = as.character(as.expression(eqn_comp))))
 ```
@@ -448,4 +456,3 @@ afraid to ask me or each other for help.
 
 # References
 
----
